# Estrutural_Analyser

./: .gitignore  AgenteCAD.spec  BASE_DWG_PARA_COMANDOS_SCRIPTS.dwl2  Dockerfile  Drawing1.dwl  Drawing1.dwl2  Estrutural_Analyzer_download_updater.spec  GEMINI.md  MASTERPLAN-CAD-ANALYZER-SQUADS.md  MASTERPLAN-CAD-ANALYZER-v2.md  MASTERPLAN-CAD-ANALYZER-v3.md  MEMORY_SYSTEM_README.md  README.md  REFACTORACAO_PYSYDE.MD  RELEASE_NOTES_v3.0.md  analysis_slab_geometry.py  check_counts.py  check_p1.py  clean_db.py  clean_files.py  comando_LAR.lsp  commit_chunks.py  debug_db.py  debug_output.txt  docker-compose.yml  fidelity_all_output.txt  fundo_analyzer_teste.py  inspect_pilares.py  main.py  main.py.bak  project_data.vision  register_document.py  repair_p1.py  requirements-phases.txt  requirements.txt  requirements_cognitive.txt  run_abcd_gen.ps1  task_verification.md  test_fix_db.vision  test_laje.dxf  (+16 more)
Agente-cad-PYSIDE-Restored-main/: .gitignore  .tufup-repo-config  AGENTS.md  DEPLOYMENT.md  PROMPTPESSOAL.MD  analysis_slab_data.py  analyze_layers_from_db.py  build_nuitka.bat  check_db.py  check_orphans.py  comando_LAZ.lsp  crash_log.txt  find_p1_id.py  fix_dxf_path.py  iniciar_dashboard.bat  inspect_pilares2.py  install_all.ps1  link_config_v2.json  main.py  push_error_v3.txt  pyproject.toml  refactor_keys.py  refactor_lajes.py  refactor_painel_seq.py  requirements.txt  requirements_cognitive.txt  test_memory_simple.py  teste_btn_lisp_fd.py  teste_correcoes.py  teste_correcoes_finais.py  teste_debug_direto.py  teste_fd_scr_atualizacao.py  teste_final_simples.py  updater.spec  (+2 more)
(+46139 files in other folders)
